fix(project): 调整字体文件等c

--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -1,8 +1,14 @@
 /* 苹方 */
 @font-face {
-    font-family: 'PingFang';
-    src: url('./PingFangSC Thin.ttc') format('truetype');
-
+    font-family: 'PingFang-Thin';
+    src: url('./PingFangSC_Thin.woff2');
 }
 
+
+
+/* 苹方 */
+@font-face {
+    font-family: 'PingFang';
+    src: url('./PingFangSC_Regular.woff2');
+}
 
